--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -317,6 +317,24 @@ paths:
                 $ref: '#/components/schemas/Error'
         '500':
           $ref: '#/components/responses/InternalServer'
+  /games:
+    get:
+      tags:
+        - games
+      summary: get games list
+      operationId: getGameList
+      security: []
+      responses:
+        '200':
+          description: list of games
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Game'
+        '500':
+          $ref: '#/components/responses/InternalServer'
   /games/{game_id}:
     get:
       tags:
