--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -589,6 +589,7 @@ components:
       required:
         - slug
         - title
+        - background_uuid
       properties:
         slug:
           type: string
